Fixed overlapping issue with fixed nav bar and absolute elements

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   align-items: center;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   position: fixed;
+  z-index: 1;
 }
 
 .header__nav-link {
